# NFShmXFrame

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build_excelprocess.sh  commit_make.sh  github-recovery-codes.txt  install_dependencies.sh  nf_check.xml  nf_naming.xml
doc/: Excel配置使用.md  NFShmXFrame_Windows平台热更重启实现详解.md  NFShmXFrame插件框架架构详解.md  NFShmXFrame插件系统三大核心组件详解.md  NFShmXFrame服务器代码组织结构分析.md  NFShmXFrame服务器初始化启动任务系统详解.md  NFShmXFrame服务器启动参数与执行流程详解.md  NFShmXFrame服务器热更重启详解.md  NFShmXFrame服务器运行流程详解.md  NFShmXFrame服务器重载配置详解.md  NFShmXFrame编译指南.md  Windows使用makefile系统.md
src/: CMakeLists.txt
src/NFServer/: CMakeLists.txt
src/NFServer/NFCenterServer/NFCenterServerPlugin/: CMakeLists.txt  NFCenterServerModule.cpp  NFCenterServerPlugin.cpp
src/NFServer/NFCheckServer/: CMakeLists.txt
src/NFServer/NFCheckServer/NFCheckServerPlugin/: CMakeLists.txt  NFCheckServerModule.cpp  NFCheckServerModule.h  NFCheckServerPlugin.cpp  NFCheckServerPlugin.h
src/NFServer/NFCityServer/: CMakeLists.txt
src/NFServer/NFCityServer/NFCityServerPlugin/: CMakeLists.txt  NFCityServerModule.cpp  NFCityServerModule.h  NFCityServerPlugin.cpp  NFCityServerPlugin.h
src/NFServer/NFGameServer/NFGameServerPlugin/: CMakeLists.txt  NFGameServerModule.cpp  NFGameServerPlugin.cpp
src/NFServer/NFLogicServer/NFLogicServerPlugin/: CMakeLists.txt  NFLogicServerModule.cpp  NFLogicServerPlugin.cpp
src/NFServer/NFLoginServer/NFLoginServerPlugin/: CMakeLists.txt  NFLoginServerModule.cpp  NFLoginServerPlugin.cpp
src/NFServer/NFMasterServer/NFMasterServerPlugin/: CMakeLists.txt  NFMasterServerModule.cpp  NFMasterServerModule.h  NFMasterServerPlugin.cpp
src/NFServer/NFMatchServer/: CMakeLists.txt
src/NFServer/NFMatchServer/NFMatchServerPlugin/: CMakeLists.txt  NFMatchServerModule.cpp  NFMatchServerModule.h  NFMatchServerPlugin.cpp  NFMatchServerPlugin.h
src/NFServer/NFNavMeshServer/: CMakeLists.txt
src/NFServer/NFNavMeshServer/NFNavMeshServerPlugin/: CMakeLists.txt  NFNavMeshServerModule.cpp  NFNavMeshServerModule.h  NFNavMeshServerPlugin.cpp  NFNavMeshServerPlugin.h
src/NFServer/NFOnlineServer/: CMakeLists.txt
src/NFServer/NFOnlineServer/NFOnlineServerPlugin/: CMakeLists.txt  NFOnlineServerModule.cpp  NFOnlineServerModule.h  NFOnlineServerPlugin.cpp  NFOnlineServerPlugin.h
src/NFServer/NFProxyAgentServer/: CMakeLists.txt  NFProxyAgentServerModule.cpp  NFProxyAgentServerModule.h  NFProxyAgentServerPlugin.cpp
src/NFServer/NFProxyServer/NFProxyClientPlugin/: CMakeLists.txt  NFProxyClientModule.cpp
src/NFServer/NFProxyServer/NFProxyServerPlugin/: CMakeLists.txt  NFProxyServerModule.cpp  NFProxyServerModule.h  NFProxyServerPlugin.cpp
src/NFServer/NFRouteAgentServer/NFRouteAgentServerPlugin/: CMakeLists.txt  NFRouteAgentServerModule.cpp  NFRouteAgentServerModule.h  NFRouteAgentServerPlugin.cpp
src/NFServer/NFRouteServer/NFRouteServerPlugin/: CMakeLists.txt  NFCRouteServerModule.cpp  NFCRouteServerModule.h  NFRouteServerPlugin.cpp
src/NFServer/NFServerComm/: CMakeLists.txt
src/NFServer/NFServerComm/Message/: ServerCommon.proto  ServerError.proto  ServerMsg.proto
src/NFServer/NFServerComm/NFDescStorePlugin/: CMakeLists.txt  NFCDescStoreModule.cpp  NFCDescStoreModule.h  NFDescStorePlugin.cpp  NFResFileDb.cpp  NFResFileDb.h  NFResMysqlDb.cpp  NFResMysqlDb.h
src/NFServer/NFServerComm/NFServerCommon/: CMakeLists.txt  NFBaseDBObj.cpp  NFBaseDBObj.h  NFDBGlobalTemplate.h  NFDBObjMgr.cpp  NFDBObjMgr.h  NFDBObjTrans.cpp  NFDBObjTrans.h  NFICheckServerModule.h  NFICityServerModule.h  NFIDescStore.cpp  NFIDescStore.h  NFIDescStoreEx.cpp  NFIDescStoreEx.h  (+15 more)
src/NFServer/NFServerStatic/: CMakeLists.txt  NFCLoadStaticPlugin.cpp  dllmain.cpp
src/NFTest/NFTestPlugin/: CMakeLists.txt  NFCTestModule.cpp
src/NFTest/NFTutorialPlugin/: CMakeLists.txt  NFTutorialModule.cpp  NFTutorialShmObj.cpp  NFTutorialShmObj.h
src/NFTest/main/: CMakeLists.txt  TestNFShmHashMap.h  TestNFShmHashMultiMap.h  main.cpp
src/NFTools/: CMakeLists.txt
src/NFTools/NFExcelProcess/: CMakeLists.txt  ExcelJsonParse.cpp  ExcelJsonParse.h  ExcelParse.cpp  ExcelParse.h  ExcelToBin.cpp  ExcelToBin.h  ExcelToMakefile.cpp  ExcelToProto.cpp  ExcelToProto.h  dllmain.cpp  main.cpp
src/NFTools/NFServerController/: CMakeLists.txt  NFServerController.cpp  NFServerController.h  NFServerControllerQt.cpp  NFServerControllerQt.h  README.md  README_Qt.md  example_usage.bat  example_usage.sh  main.cpp  main_qt.cpp  servers.conf.example
src/NFrame/: CMakeLists.txt
src/NFrame/NFComm/: CMakeLists.txt
src/NFrame/NFCommPlugin/: CMakeLists.txt
src/NFrame/NFCommPlugin/NFNetPlugin/: CMakeLists.txt  Encrypt.cpp  Encrypt.h  InternalPacketParse.cpp  InternalPacketParse.h  NFCNetModule.cpp  NFCNetModule.h  NFINetMessage.h  NFNetPlugin.h  NFPacketParseMgr.cpp  NFPacketParseMgr.h
src/NFrame/NFCommPlugin/NFNetPlugin/Bus/: NFBusDefine.h  NFBusHash.h  NFBusShm.h  NFCBusClient.cpp  NFCBusClient.h  NFCBusMessage.cpp  NFCBusMessage.h  NFCBusServer.cpp  NFCBusServer.h  NFIBusConnection.cpp  NFIBusConnection.h
src/NFrame/NFCommPlugin/NFNetPlugin/Enet/: EnetObject.cpp  EnetObject.h  NFEnetClient.cpp  NFEnetClient.h  NFEnetMessage.cpp  NFEnetMessage.h  NFEnetServer.cpp  NFEnetServer.h  NFIEnetConnection.h
src/NFrame/NFCommPlugin/NFNetPlugin/Evpp/: NFCHttpClient.cpp  NFCHttpClient.h  NFCHttpServer.cpp  NFCHttpServer.h  NFEvppClient.cpp  NFEvppClient.h  NFEvppNetMessage.cpp  NFEvppNetMessage.h  NFEvppServer.cpp  NFEvppServer.h  NFIConnection.h  NetEvppObject.cpp  NetEvppObject.h
src/NFrame/NFPluginLoader/: CMakeLists.txt  NFCLoadStaticPlugin.cpp  dllmain.cpp  main.cpp
src/NFrame/NFPluginManager/: CMakeLists.txt  NFCAppInited.cpp  NFCAppInited.h  NFCDynLib.cpp  NFCDynLib.h  NFCPluginManager.cpp  NFCPluginManager.h  NFCrashHandlerMgr.h  NFPluginLoader.cpp  NFPluginLoader.h  NFPrintfLogo.cpp  NFPrintfLogo.h  NFProcessParameter.cpp  NFProcessParameter.h  NFSignalHandleMgr.cpp  NFSignalHandleMgr.h
src/NFrame/NFrameStatic/: CMakeLists.txt  NFCLoadStaticPlugin.cpp  dllmain.cpp  main.cpp
tools/: linux_servers.conf  shm_rm.sh
(+316 files in other folders)
